@@ -2,6 +2,7 @@ $Rev$
 [2007/09/21]
 mHelp.py            Fix webbrowser bug. Thanks Tom Eubank
                     remove finddialog.xrc and finddialog_zh_CN.xrc
+import_utils.py     When evalating a word, try to import it first.
 
 [2007/09/20]
 FindReplaceDialog.py Removed replaced with FindReplace.py and refactor find and replace
